removed any and all custom tikz

--- a/public/index.html
+++ b/public/index.html
@@ -139,18 +139,6 @@
 
 
 
-  
-  
-  
-  
-  <link rel="stylesheet" type="text/css" href="/lib/tikzjax/styles-obs.80bb0c0aefad331bc421e4d84faf113c0a517aef6b1c12ea555616d42ace75a0e6264ee08585b76f811772258e936c6b97489354365699be482b573d006d0a5c.css" integrity="sha512-gLsMCu&#43;tMxvEIeTYT68RPApReu9rHBLqVVYW1CrOdaDmJk7ghYW3b4EXciWOk2xrl0iTVDZWmb5IK1c9AG0KXA==">
-  
-  
-  <script defer src="/lib/tikzjax/tikzjax-obs.e0c4d38d279cba52ecb4ddd412f72f89031c0b4fd56025412f428205ca69fc8da8bf77235ac41ad6939ed06cd6456083f8741538f5e3b4adc9819a66a6837b00.js" integrity="sha512-4MTTjSeculLstN3UEvcviQMcC0/VYCVBL0KCBcpp/I2ov3cjWsQa1pOe0GzWRWCD&#43;HQVOPXjtK3JgZpmpoN7AA=="></script>
-  
-  
-  <script defer src="/lib/tikzjax/postproc-tikz-svg.1ae8c19aa45af935cef4da661ff56d6d17d39002060e5b65ca52e22c87113c59402b26835dce246498fcf64a0426a7dfde4f8eb7b170f32ecc73c1c2e0021aba.js" integrity="sha512-GujBmqRa&#43;TXO9NpmH/VtbRfTkAIGDltlylLiLIcRPFlAKyaDXc4kZJj89koEJqff3k&#43;Ot7Fw8y7Mc8HC4AIaug==" type="module"></script>
-
 
   
   
@@ -487,14 +475,7 @@
 
     </div>
   </div>
-  <div class="px-4 flex-shrink prose dark:prose-invert"><p>
-
-  <span class="icon relative inline-block align-text-bottom">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="currentColor" d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z"/></svg>
-  </span>
-
- 2023&ndash;now postdoc in the Inria team Macaron (previously TONUS)</p>
-<p>I am a post-doc in the Inria team Macaron (previously TONUS) in Strasbourg, under the supervision of Emmanuel Franck. Before that, I was a graduate assistant at Ensimag as a member of the Laboratoire Jean Kuntzmann in Grenoble. I completed my PhD in December 2021 in Rennes under the supervision of P. Chartier and M. Lemou.</p>
+  <div class="px-4 flex-shrink prose dark:prose-invert"><p>I am a post-doc in the Inria team Macaron (previously TONUS) in Strasbourg, under the supervision of Emmanuel Franck. Before that, I was a graduate assistant at Ensimag as a member of the Laboratoire Jean Kuntzmann in Grenoble. I completed my PhD in December 2021 in Rennes under the supervision of P. Chartier and M. Lemou.</p>
 <p>My research focuses on multi-scale and geometric methods in a numerical context. More specifically, I study the properties of asymptotic expansions and use them to obtain better numerical convergence in stiff problems. During my PhD, I worked on relaxation problems such as the linear Boltzmann equation, and more recently I worked on the Bloch equation. For my post-doc, I study the properties of geometric machine learning when reconstructing vector fields based on trajectories.</p>
 <p>
 
@@ -504,88 +485,6 @@
   </span>
 
  <code>tremant-research &lt;at&gt; pm.me</code></p>
-
-<script type="image/tikz" type="module">
-  <script type="text/tikz">
-    
-\begin{document}
-  \begin{tikzpicture}
-    \draw (0,0) circle (1in);
-  \end{tikzpicture}
-\end{document}
-
-  </script>
-</script>
-
-<script type="text/tikz">
-\begin{document}
-  \begin{tikzpicture}[domain=0:4]
-    \draw[very thin,color=gray] (-0.1,-1.1) grid (3.9,3.9);
-    \draw[->] (-0.2,0) -- (4.2,0) node[right] {$x$};
-    \draw[->] (0,-1.2) -- (0,4.2) node[above] {$f(x)$};
-    \draw[color=red]    plot (\x,\x)             node[right] {$f(x) =x$};
-    \draw[color=blue]   plot (\x,{sin(\x r)})    node[right] {$f(x) = \sin x$};
-    \draw[color=orange] plot (\x,{0.05*exp(\x)}) node[right] {$f(x) = \frac{1}{20} \mathrm e^x$};
-  \end{tikzpicture}
-\end{document}
-</script>
-<script type="text/tikz">
-\usepackage{tikz-cd}
-\begin{document}
-\begin{tikzcd}
-    T
-    \arrow[drr, bend left, "x"]
-    \arrow[ddr, bend right, "y"]
-    \arrow[dr, dotted, "{(x,y)}" description] & & \\
-    K & X \times_Z Y \arrow[r, "p"] \arrow[d, "q"]
-    & X \arrow[d, "f"] \\
-    & Y \arrow[r, "g"]
-    & Z
-\end{tikzcd}
-\end{document}
-</script>
-
-<script type="image/tikz" type="module">
-  <script type="text/tikz">
-    
-\usepackage{tikz-cd}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\begin{document}
-	\begin{tikzcd}[font = \footnotesize, column sep = 5em, row sep = small]
-        \dot u = f(u)
-		\arrow[dr, "\Phi_h" description]
-		\arrow[dd, dashed, "\text{\tiny b.e.a.}"] & \\
-        & \vphantom{\int} u_n = \widetilde{u}(nh) \\
-        \dot{\widetilde{u}}_h = \widetilde{f}_h \left( \widetilde{u}_h \right)
-		\arrow[ur, "\varphi_h" description] &
-    \end{tikzcd}
-\end{document}
-
-  </script>
-</script>
-
-<!-- <div class="flex px-4 py-2 mb-8 text-base rounded-md bg-primary-100 dark:bg-primary-900"> -->
-<!--   <span class="flex items-center pe-3 text-primary-400"> -->
-<!--     
-
-  <span class="icon relative inline-block align-text-bottom">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M506.3 417l-213.3-364c-16.33-28-57.54-28-73.98 0l-213.2 364C-10.59 444.9 9.849 480 42.74 480h426.6C502.1 480 522.6 445 506.3 417zM232 168c0-13.25 10.75-24 24-24S280 154.8 280 168v128c0 13.25-10.75 24-23.1 24S232 309.3 232 296V168zM256 416c-17.36 0-31.44-14.08-31.44-31.44c0-17.36 14.07-31.44 31.44-31.44s31.44 14.08 31.44 31.44C287.4 401.9 273.4 416 256 416z"/></svg>
-
-  </span>
-
- -->
-<!--   </span> -->
-<!--   <span class="flex items-center justify-between grow dark:text-neutral-300"> -->
-<!--     <span class="prose dark:prose-invert">This is a demo of the <code id="layout">page</code> layout.</span> -->
-<!--     <button -->
-<!--       id="switch-layout-button" -->
-<!--       class="px-4 !text-neutral !no-underline rounded-md bg-primary-600 hover:!bg-primary-500 dark:bg-primary-800 dark:hover:!bg-primary-700" -->
-<!--     > -->
-<!--       Switch layout &orarr; -->
-<!--     </button> -->
-<!--   </span> -->
-<!-- </div> -->
 </div>
 </article>
 <section>
